src/objects/GS_Admin_Checklist_Section__mdt.object
<CustomObject>
    <description>NPSP Get Started Page sections</description>
    <fields>
        <fullName>Description_Label__c</fullName>
        <description>The API name for the Description label of a section item on the Get Started page. Must match an imported label in the gsLabelMapper LWC.</description>
        <inlineHelpText>The API name for the Description label of a section item on the Get Started page. Must match an imported label in the gsLabelMapper LWC.</inlineHelpText>
        <label>Description Label Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <description>The position of this section on the Get Started page.</description>
        <inlineHelpText>The position of this section on the Get Started page.</inlineHelpText>
        <label>Position</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Title_Label__c</fullName>
        <description>The API Name for the Title label of a section item on the Get Started page. Must match an imported label in the gsLabelMapper LWC.</description>
        <inlineHelpText>The API Name for the Title label of a section item on the Get Started page. Must match an imported label in the gsLabelMapper LWC.</inlineHelpText>
        <label>Title Label Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>GS Admin Checklist Section</label>
    <pluralLabel>GS Admin Checklist Sections</pluralLabel>
</CustomObject>